--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+  direction: rtl;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.titlecard {
+  width: 800px;
+  max-width: 100vw;
+  img {
+    width: 800px;
+    max-width: 100vw;
+  }
+}
