disable form on submit; pre-cache "after" image

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,11 +1,12 @@
 <div class="titlecard">
   <img src="assets/invitation.jpeg" alt="מסיבת הולדת לדניאל" />
+  <img src="assets/invitation-after.jpeg" alt="מסיבת הולדת לדניאל" async defer style="position: absolute; visibility: hidden;" />
 </div>
 <form [formGroup]="rsvpform" (ngSubmit)="onSubmit()">
 <p>
   <mat-form-field subscriptSizing="dynamic">
     <mat-label>שם</mat-label>
-    <input matInput placeholder="" formControlName="name" required>
+    <input matInput formControlName="name" required>
     <mat-icon matPrefix>badge</mat-icon>
   </mat-form-field>
 </p>
@@ -16,7 +17,7 @@
   <mat-label>כמה מגיעים?</mat-label>
   <select matNativeControl formControlName="count" required>
     <option value="1">1</option>
-    <option value="2" selected>2</option>
+    <option value="2">2</option>
     <option value="3">3</option>
     <option value="4">4</option>
     <option value="5">5</option>
@@ -31,14 +32,20 @@
 <ng-template #desktopCount>
   <mat-form-field subscriptSizing="dynamic">
     <mat-label>כמה מגיעים?</mat-label>
-    <input matInput placeholder="" type="number" value="2" min="1" max="10" formControlName="count" required>
+    <input matInput type="number" value="2" min="1" max="10" formControlName="count" required>
     <mat-icon matPrefix>tag</mat-icon>
   </mat-form-field>
 </ng-template>
 </p>
 <p>
-  <button mat-stroked-button type="submit">
-    <span>אישור</span>
+  <button mat-stroked-button type="submit" [disabled]="loading">
+    <span *ngIf="loading; then loadingAnim else textButton"></span>
+    <ng-template #loadingAnim>
+      <mat-spinner diameter="20"></mat-spinner>
+    </ng-template>
+    <ng-template #textButton>
+      <span>אישור</span>
+    </ng-template>
   </button>
 </p>
 </form>
