--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     max-width: 100vw;
   }
 }
+
+.image-preload {
+	position: absolute;
+	visibility: hidden;
+	width:1px!important;
+	height:1px!important;
+	top: 0px;
+	left: 0px;
+}
