--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,9 +61,9 @@ main {
   padding: 0 1rem 1rem;
   box-sizing: inherit;
   position: relative;
-  background-image: url('../assets/background.jpeg');
+  background-image: url('../assets/artboard.jpeg');
   background-repeat: repeat;
-  background-size: 192px;
+  background-size: 800px;
   min-height: 100vh;
 }
 
