--- a/src/app/rsvp/rsvp.component.scss
+++ b/src/app/rsvp/rsvp.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 1em;
+  padding: 0;
   width: 100%;
 }
 
