--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .titlecard {
   width: 800px;
   max-width: 100vw;
+  overflow-y: visible;
+  height: 800px;
   img {
     width: 800px;
     max-width: 100vw;
