--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 800px;
   max-width: 100vw;
   overflow-y: visible;
-  height: 800px;
+  height: min(800px, 100vw);
   img {
     width: 800px;
     max-width: 100vw;
