--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,6 +1,6 @@
 <div class="titlecard">
-  <img src="assets/invitation.jpeg" alt="מסיבת הולדת לדניאל" />
-  <img src="assets/invitation-after.jpeg" alt="מסיבת הולדת לדניאל" async defer class="image-preload"/>
+  <img src="assets/invitation.jpeg" alt="חגיגת הולדת לדניאל" />
+  <img src="assets/invitation-after.jpeg" alt="חגיגת הולדת לדניאל" async defer class="image-preload"/>
 </div>
 <form [formGroup]="rsvpform" (ngSubmit)="onSubmit()">
 <p>
