--- a/src/app/thankyou/thankyou.component.html
+++ b/src/app/thankyou/thankyou.component.html
@@ -1,5 +1,5 @@
 <div class="titlecard">
-  <img src="assets/invitation-after.jpeg" alt="מסיבת הולדת לדניאל" />
+  <img src="assets/invitation-after.jpeg" alt="חגיגת הולדת לדניאל" />
 </div>
 <h1>תודה!</h1>
 <h3>נשמח לראותכם</h3>
